Se mejoró el acceso el menu flotante

--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -1,1 +1,12 @@
-<p>camera works!</p>
+<section class="content">
+  <app-float-navbar></app-float-navbar>
+  <div class="camera_home">
+    <!-- Botones para activar y desactivar la imagen -->
+    <div class="camera_btns">
+      <button class="btn_action" (click)="showVideo()">Activar Cámara</button>
+      <button class="btn_action" (click)="hideVideo()">Apagar Cámara</button>
+    </div>
+    <img src="{{lifeUrl}}" id="videoImage" alt="">
+  </div>
+</section>
+
