--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,13 +5,36 @@
       <img src="../../../assets/img/banner3.jpg" alt="banner">
       <h1 class="info-title">Bienvenido al Sistema</h1>
       <hr class="line">
+      <div class="card-title">Entradas - Vehiculos</div>
       <div class="card">
-        <span class="card-prop">Entradas</span>
-        <span class="card-number">15</span>
+        <div class="card-info">
+          <span class="card-prop">Militares</span>
+          <span class="card-number">10</span>
+        </div>
+        <div class="card-info">
+          <span class="card-prop">Administrativos</span>
+          <span class="card-number">15</span>
+        </div>
+        <div class="card-info">
+          <span class="card-prop">Particulares</span>
+          <span class="card-number">15</span>
+        </div>
       </div>
+      <hr class="line">
+      <div class="card-title">Salidas - Vehículos</div>
       <div class="card">
-        <span class="card-prop">Salidas</span>
-        <span class="card-number">15</span>
+        <div class="card-info">
+          <span class="card-prop">Militares</span>
+          <span class="card-number">10</span>
+        </div>
+        <div class="card-info">
+          <span class="card-prop">Administrativos</span>
+          <span class="card-number">15</span>
+        </div>
+        <div class="card-info">
+          <span class="card-prop">Particulares</span>
+          <span class="card-number">15</span>
+        </div>
       </div>
     </div>
     <div class="camera_home">
