--- a/src/app/components/float-navbar/float-navbar.component.css
+++ b/src/app/components/float-navbar/float-navbar.component.css
@@ -6,11 +6,12 @@
   height: 100%;
   margin-top: -1rem;
   overflow-y: auto;
-  position: absolute;
+  position: fixed;
   background: rgb(0, 0, 0);
   z-index: 1;
   left: 0;
   transition: all 0.1s ease;
+  border-right: 1px solid white
 }
 
 .nav_float {
@@ -19,7 +20,7 @@
   width: 100%;
   flex-direction: column;
   box-sizing: border-box;
-  align-items: start;
+  align-items: flex-start;
   height: fit-content;
 }
 
@@ -52,7 +53,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 1rem;
   box-sizing: border-box;
   gap: 10px;
@@ -67,7 +68,6 @@
 
 @media screen and (min-width: 900px) {
   .container_float {
-    position: absolute;
     z-index: 1;
     left: -14rem;
   }
