--- a/src/app/components/float-navbar/float-navbar.component.html
+++ b/src/app/components/float-navbar/float-navbar.component.html
@@ -1,10 +1,23 @@
-<div class="container_float {{visible && 'hide_nav'}}" id="hiddenNav">
-  <h1 class="user-name">{{sysName}}</h1>
+<div class="container_float {{!visible && 'hide_nav'}}" id="hiddenNav">
+  <h4 class="user-name">{{user.name}} {{user.surname}}</h4>
+  <hr class="line">
   <ul class="nav_float">
     <li *ngFor="let view of views" class="float_link">
       <a href="{{view.path}}" [attr.target]="view.blank ? '_blank' : null">
         <i class="{{view.icon}}"></i>
         <span>{{view.pathName}}</span></a>
+    </li>
+    <li class="float_link" *ngIf="isAdmin">
+      <a href="dashboard/users">
+        <i class="fa-solid fa-user-group"></i>
+        <span>Usuarios</span>
+      </a>
+    </li>
+    <li class="float_link">
+      <a href="" (click)="closeSession()">
+        <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        <span>Salir</span>
+      </a>
     </li>
   </ul>
 </div>
