--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,12 +1,3 @@
-.content {
-  padding: 1rem;
-  box-sizing: border-box;
-  width: 100%;
-  height: calc(100vh - 4rem);
-  overflow-y: auto;
-  position: relative;
-}
-
 .line {
   width: 100%;
   border: 1px solid white;
@@ -35,10 +26,26 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.card-title {
+  width: 100%;
+  color: yellow;
+  display: flex;
+  justify-content: center;
+}
+
+.card-info {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
 }
 
 .card-prop {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: 600;
 }
 
@@ -55,41 +62,18 @@
   font-size: 2rem;
 }
 
-.camera_home {
-  flex-grow: 1;
-  width: 100%;
-  display: flex;
-  height: fit-content;
-  align-items: center;
-  flex-direction: column;
-  background: black;
-  padding: 1rem;
-  box-sizing: border-box;
-  gap: 1rem;
-}
+@media screen and (max-width:600px) {
+  .home {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: rgb(0, 0, 0);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 4px 2px rgb(210, 210, 210);
+  }
 
-.camera_home img {
-  display: flex;
-  flex-grow: 1;
-  width: 100%;
-  max-width: 600px;
-}
-
-.camera_btns {
-  width: 100%;
-  justify-content: center;
-  display: flex;
-  gap: 1rem;
-}
-
-.btn_action {
-  padding: 10px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-}
-
-.btn_action:first-child {
-  background: rgb(48, 183, 48);
-  color: white
+  .info {
+    border: 0;
+  }
 }
