--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,58 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.content {
+  padding: 1rem;
+  box-sizing: border-box;
+  width: 100%;
+  height: calc(100vh - 4rem);
+  overflow-y: auto;
+  position: relative;
+}
+
+
+.camera_home {
+  flex-grow: 1;
+  width: 100%;
+  display: flex;
+  height: fit-content;
+  align-items: center;
+  flex-direction: column;
+  background: black;
+  padding: 1rem;
+  box-sizing: border-box;
+  gap: 1rem;
+}
+
+.camera_home img {
+  display: flex;
+  flex-grow: 1;
+  width: 100%;
+  max-width: 600px;
+}
+
+.camera_btns {
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  gap: 1rem;
+}
+
+.btn_action {
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn_action:first-child {
+  background: rgb(48, 183, 48);
+  color: white
+}
+
+@media screen and (max-width: 600px) {
+  .camera_btns {
+    flex-direction: column;
+  }
+}
