--- a/src/app/components/vehicles/vehicles.component.html
+++ b/src/app/components/vehicles/vehicles.component.html
@@ -1,4 +1,7 @@
 <section class="content">
   <app-float-navbar></app-float-navbar>
-  <h1>Vehiculos</h1>
+  <app-table-common
+  [sectionName]="sectionName"
+  [path]= "path"
+  [pathLoads]= "pathLoads"></app-table-common>
 </section>
