--- a/src/app/components/table-common/table-common.component.css
+++ b/src/app/components/table-common/table-common.component.css
@@ -1,3 +1,8 @@
+.section-container{
+  width: 100%;
+  min-height: fit-content;
+}
+
 .table-container {
   width: 100%;
   overflow-x: auto;
@@ -8,6 +13,7 @@
 .section-title {
   width: 100%;
   margin-bottom: 1rem;
+  font-size: 2rem;
 }
 
 .table-filters {
