--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,18 @@ body {
   color: white
 }
 
+.btn_add {
+  padding: .6rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  min-width: 8rem;
+  background: rgb(0, 119, 255);
+  color: white;
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+
 .hidden {
   display: none;
 }
@@ -78,5 +90,9 @@ body {
 @media screen and (max-width: 600px) {
   .camera_btns {
     flex-direction: column;
+  }
+
+  .btn_add {
+    width: 100%;
   }
 }
