--- a/src/app/components/vehicles/vehicles.component.html
+++ b/src/app/components/vehicles/vehicles.component.html
@@ -3,5 +3,6 @@
   <app-table-common
   [sectionName]="sectionName"
   [path]= "path"
-  [pathLoads]= "pathLoads"></app-table-common>
+  [theads]= "theads"
+  [fields]= "fields"></app-table-common>
 </section>
