Se mejoró la datatables

--- a/src/app/components/drivers/drivers.component.html
+++ b/src/app/components/drivers/drivers.component.html
@@ -1,50 +1,8 @@
 <section class="content">
   <app-float-navbar></app-float-navbar>
-  <h1 class="section-title">Choferes</h1>
- <button class="btn_add">Agregar</button>
- <div class="table-filters">
-  <form class="per-page-container" [formGroup]="perPage">
-    <label for="per-page">Mostrar</label>
-    <select id="per-page" formControlName="number" (change)="detectChange($event)">
-      <option *ngFor="let opt of table.perPages; let i = index" value="{{opt}}">{{opt}}</option>
-    </select>
-    <label for="per-page">entradas</label>
-  </form>
-  <div class="search-container">
-    <label for="search">Buscar</label>
-    <input id= "search" type="search" name="q" autocomplete="off">
-  </div>
- </div>
- <div class="table-container">
-  <table class="table-registers">
-    <thead>
-      <tr>
-        <th *ngFor="let thead of theads; let i = index;" class="{{i===0 ? 'th-sticky':''}}">{{thead}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let driver of items; let i = index;">
-        <td class="column-sticky {{(i+1)%2 === 0 ? 'sticky-even': 'sticky-odd'}}">{{i+1}}</td>
-        <td>{{driver.dni}}</td>
-        <td>{{driver.surname}}</td>
-        <td>{{driver.name}}</td>
-        <td>{{driver.type}}</td>
-        <td>
-          <div class="table-btns">
-            <button class="table-btn-edit"><i class="fa-solid fa-pen-to-square"></i></button>
-            <button class="table-btn-delete"><i class="fa-solid fa-trash"></i></button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class="paginator-btns">
-  <button class="paginator-btn" (click)="previousPage()">Anterior</button>
-  <button
-    *ngFor="let btn of table.pages"
-    class="paginator-btn {{btn === table.currentPage ? 'select-page-btn':''}}"
-    (click)="changePage(btn)">{{btn}}</button>
-  <button class="paginator-btn" (click)="nextPage()">Siguiente</button>
-</div>
+  <app-table-common
+  [sectionName]="sectionName"
+  [path]= "path"
+  [theads]= "theads"
+  [fields]= "fields"></app-table-common>
 </section>
