--- a/src/app/components/table-common/table-common.component.html
+++ b/src/app/components/table-common/table-common.component.html
@@ -1,50 +1,54 @@
 <section class="section-container">
   <h1 class="section-title">{{sectionName}}</h1>
  <button class="btn_add">Agregar</button>
- <div class="table-filters">
-  <form class="per-page-container" [formGroup]="perPage">
-    <label for="per-page">Mostrar</label>
-    <select id="per-page" formControlName="number" (change)="detectChange($event)">
-      <option *ngFor="let opt of table.perPages; let i = index" value="{{opt}}">{{opt}}</option>
-    </select>
-    <label for="per-page">entradas</label>
-  </form>
-  <form class="search-container" [formGroup]="search">
-    <label for="search">Buscar</label>
-    <input id= "search" type="search" name="q" autocomplete="off" formControlName="filter" (input)="onInput($event)">
-  </form>
- </div>
- <div class="table-container">
-  <table class="table-registers">
-    <thead>
-      <tr>
-        <th *ngFor="let thead of theads; let i = index;" class="{{i===0 && items.length !==0 ? 'th-sticky':''}}">{{thead}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngIf="items.length === 0">
-        <td class="sticky-even" colspan="20">No hay resultados</td>
-      </tr>
-      <tr *ngFor="let item of items; let i = index;">
-        <td class="column-sticky {{(i+1)%2 === 0 ? 'sticky-even': 'sticky-odd'}}">{{((table.currentPage - 1) * perPage.get('number')?.value) + (i+1)}}</td>
-        <td *ngFor="let field of fields">{{item[field]}}</td>
-        <td>
-          <div class="table-btns">
-            <button class="table-btn-edit"><i class="fa-solid fa-pen-to-square"></i></button>
-            <button class="table-btn-delete"><i class="fa-solid fa-trash"></i></button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class="paginator-btns" *ngIf="items.length !== 0">
-  <button class="paginator-btn" (click)="previousPage()">Anterior</button>
-  <button
-    *ngFor="let btn of table.pages"
-    class="paginator-btn {{btn === table.currentPage ? 'select-page-btn':''}}"
-    (click)="changePage(btn)">{{btn}}</button>
-  <button class="paginator-btn" (click)="nextPage()">Siguiente</button>
-</div>
+ <main class="main-paginator">
+   <div class="table-filters">
+     <form class="per-page-container" [formGroup]="perPage">
+       <label for="per-page">Mostrar</label>
+       <select id="per-page" formControlName="number" (change)="detectChange($event)">
+         <option *ngFor="let opt of table.perPages; let i = index" value="{{opt}}">{{opt}}</option>
+       </select>
+       <label for="per-page">entradas</label>
+     </form>
+     <form class="search-container" [formGroup]="search">
+       <label for="search">Buscar</label>
+       <input id= "search" type="search" name="q" autocomplete="off" formControlName="filter" (input)="onInput($event)">
+     </form>
+   </div>
+   <div class="table-container">
+     <table class="table-registers">
+       <thead>
+         <tr>
+           <th *ngFor="let thead of theads; let i = index;" class="{{i===0 && items.length !==0 ? 'th-sticky':''}}">{{thead}}</th>
+         </tr>
+       </thead>
+       <tbody *ngIf="items.length > 0">
+         <tr *ngIf="items.length === 0">
+           <td class="sticky-even" colspan="20">No hay resultados</td>
+         </tr>
+         <tr *ngFor="let item of items; let i = index;">
+           <td *ngFor="let field of fields" class="{{field === 'index' ? (((i+1)%2) === 0 ? 'column-sticky sticky-even':'column-sticky sticky-odd'): ''}}">{{item[field]}}</td>
+           <td>
+             <div class="table-btns">
+               <button class="table-btn-edit"><i class="fa-solid fa-pen-to-square"></i></button>
+               <button class="table-btn-delete"><i class="fa-solid fa-trash"></i></button>
+             </div>
+           </td>
+         </tr>
+       </tbody>
+     </table>
+   </div>
+   <div class="bottom-pag-container">
+     <div class="paginator-text-bottom" *ngIf="items.length > 0">Filas {{items[0]['index']}} a {{items[items.length-1]['index']}} de {{table.totalRows}} registros</div>
+     <div class="paginator-btns" *ngIf="items.length !== 0">
+       <button class="paginator-btn no-selected" (click)="previousPage()">Anterior</button>
+       <button
+         *ngFor="let btn of table.pages"
+         class="paginator-btn {{btn === table.currentPage ? 'select-page-btn':'no-selected'}}"
+         (click)="changePage(btn)">{{btn}}</button>
+       <button class="paginator-btn no-selected" (click)="nextPage()">Siguiente</button>
+     </div>
+   </div>
+ </main>
 </section>
 
