--- a/src/app/components/table-common/table-common.component.html
+++ b/src/app/components/table-common/table-common.component.html
@@ -30,7 +30,7 @@
            <td *ngFor="let field of fields" class="{{field === 'index' ? (((i+1)%2) === 0 ? 'column-sticky sticky-even':'column-sticky sticky-odd'): ''}}">{{item[field]}}</td>
            <td>
              <div class="table-btns">
-               <button class="table-btn-edit"><i class="fa-solid fa-pen-to-square"></i></button>
+               <button class="table-btn-edit" (click)="updateRow(item)"><i class="fa-solid fa-pen-to-square"></i></button>
                <button class="table-btn-delete"><i class="fa-solid fa-trash"></i></button>
              </div>
            </td>
