--- a/src/styles.css
+++ b/src/styles.css
@@ -83,8 +83,68 @@ body {
   margin-bottom: 2rem;
 }
 
-.hidden {
-  display: none;
+
+/* CSS de ventana de edicion */
+.modal-form {
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.421);
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.modal-form form {
+  position: relative;
+  background: white;
+  width: 100%;
+  max-width: 600px;
+  padding: 1.5rem;
+  height: fit-content;
+}
+
+.close-form {
+  position: absolute;
+  top: 0px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 10px;
+}
+
+.modal-title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-input-block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.modal-input-block input {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  padding: 10px;
+  font-size: 1rem;
+  outline-color: rgb(0, 119, 255);
+}
+.modal-input-block select {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  padding: 10px;
+  font-size: 1rem;
+  outline-color: rgb(0, 119, 255);
 }
 
 @media screen and (max-width: 600px) {
@@ -95,4 +155,8 @@ body {
   .btn_add {
     width: 100%;
   }
+}
+
+.hidden {
+  display: none;
 }
