--- a/src/app/components/drivers/drivers.component.html
+++ b/src/app/components/drivers/drivers.component.html
@@ -14,31 +14,31 @@
       <h2 class="modal-title">Editar</h2>
       <div class="modal-input-block">
         <label for="">Cédula</label>
-        <input type="text" name="dni" formControlName="dni">
-        <sub class="error">Data incorrecta</sub>
+        <input type="text" name="dni" formControlName="dni" (input)="detectChange($event)">
+        <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
       </div>
       <div class="modal-input-block">
         <label for="">Nombres</label>
-        <input type="text" name="name" formControlName="name">
-        <sub class="error">Data incorrecta</sub>
+        <input type="text" name="name" formControlName="name" (input)="detectChange($event)">
+        <sub class="error-form" *ngIf="errors['name'] !== ''">{{errors['name']}}</sub>
       </div>
       <div class="modal-input-block">
         <label for="">Apellidos</label>
-        <input type="text" name="surname" formControlName="surname">
-        <sub class="error">Data incorrecta</sub>
+        <input type="text" name="surname" formControlName="surname" (input)="detectChange($event)">
+        <sub class="error-form" *ngIf="errors['surname'] !== ''">{{errors['surname']}}</sub>
       </div>
       <div class="modal-input-block">
         <label for="">Tipo</label>
-        <select  name="type_id" formControlName="type_id">
+        <select  name="type_id" formControlName="type_id" (change)="detectChange($event)">
           <option value="">Escoja el tipo</option>
-          <option value="1">A</option>
+          <option *ngFor="let type of types" value="{{type.id}}">{{type.name | titlecase}}</option>
           <option value="2">B</option>
         </select>
-        <sub class="error">Data incorrecta</sub>
+        <sub class="error-form" *ngIf="errors['type_id'] !== ''">{{errors['type_id']}}</sub>
       </div>
       <div class="btns-form-modal">
-        <button>Guardar</button>
-        <button>Cancelar</button>
+        <button (click)="sendData()">Guardar</button>
+        <button (click)="resetForm()">Cancelar</button>
       </div>
     </form>
   </div>
