--- a/src/app/components/table-common/table-common.component.css
+++ b/src/app/components/table-common/table-common.component.css
@@ -38,13 +38,13 @@
   justify-content: center;
 }
 
+.search-container {
+  flex-wrap: wrap;
+}
+
 #per-page, #search {
   padding: 5px;
   outline: none;
-}
-
-#search {
-  min-width: 10rem;
 }
 
 .table-registers {
