--- a/src/app/components/vehicles/vehicles.component.html
+++ b/src/app/components/vehicles/vehicles.component.html
@@ -6,7 +6,7 @@
   [theads]= "theads"
   [fields]= "fields"
   (sendDataEvent)="receiveData($event)"></app-table-common>
-  <div class="modal-form {{!isVisible ? 'hidden': ''}}">
+<!--   <div class="modal-form {{!isVisible ? 'hidden': ''}}">
     <form>
       <div>
         <label for=""></label>
@@ -29,5 +29,5 @@
         <sub class="error">Data incorrecta</sub>
       </div>
     </form>
-  </div>
+  </div> -->
 </section>
