--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,31 @@ body {
   color: red
 }
 
+.btns-form-modal {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 100%;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.btns-form-modal button{
+  padding: 10px;
+  min-width: 6rem;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-modal-ok{
+  background: rgb(0, 119, 255);
+  color: white
+}
+
+.btn-modal-cancel{
+  background: rgb(209, 209, 209);
+}
+
 @media screen and (max-width: 600px) {
   .camera_btns {
     flex-direction: column;
